bizinikiwi/pezframe/support/test/tests/pezpallet_ui/authorize_weight_but_no_closure.stderr
error: Invalid pezpallet::call, weight_of_authorize attribute must be used with authorize attribute
  --> tests/pezpallet_ui/authorize_weight_but_no_closure.rs:36:36
   |
36 |         #[pezpallet::weight_of_authorize(Weight::zero())]
   |                                          ^^^^^^
